@@ -52,7 +52,7 @@
         return
       endif
       nm2=n-2
-      v=dfloat(stiffness)
+      v=dble(stiffness)
       arg=(2.d0*pi)/v
 !      p=(6.d0*(cos(arg)-1.d0)**2.d0)/(cos(arg)+2.d0)
       pp=sngl(p) ! this doesn't do anything, right?
@@ -70,7 +70,7 @@
       a(2,1)=c2(1)
       nc=2
 ! begin ludapb
-      rn=dble(1.d0/(dfloat(nm2)*16.d0))
+      rn=dble(1.d0/(dble(nm2)*16.d0))
       d1=1.d0
       d2=0.d0
       ncp1=nc+1
