@@ -1,5 +1,10 @@
 * CHANGES IN dplR VERSION 1.7.5
 
+File: adsf.f95 and capsf.f95
+----------------
+
+- Replaced DFLOAT with DBLE as per BDR's reasonable suggestion.
+
 File: ssf
 ----------------
 
